--- a/src/styles/extras.css
+++ b/src/styles/extras.css
@@ -1,11 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
+
 body{
   background-color: black;
+  text-align: center;
+}
+
+* {
+  font-family: "Abel", sans-serif;
 }
 
 .about {
   background-color: black;
   color: white;
-  
 }
 .aboutImage img {
   all: unset;
@@ -87,4 +93,25 @@ div.contact-form p{
   width: fit-content;
   padding: 0;
   margin: 0 auto;
+}
+
+.loader {
+  border: 10px solid white;
+  border-radius: 50%;
+  border-top: 10px solid yellow;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  /* to make it center: https://stackoverflow.com/questions/6256043/css-position-loading-indicator-in-the-center-of-the-screen */
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
