--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,18 +7,40 @@ html {
 body {
   text-align: center;
 }
+
 * {
   font-family: "Abel", sans-serif;
 }
 
-img {
-  height: 100px;
-  width: 100px;
+.container img {
+  height: 95%;
+  width: 95%;
 }
+
 .container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  font-size: 1em;
+}
+
+@media only screen and (min-width: 600px) {
+  .container {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    font-size: 1.4em;
+    grid-auto-rows: 200px;
+  }
+  
+  /* classes that style the grid layout. */
+  .container div.card-tall {
+    grid-row: span 2 / auto;
+  }
+  .container div.card-wide {
+    grid-column: span 2 / auto;
+  }
+  .container div > img:hover {
+    opacity: 0.3;
+  }
 }
 
 input {
@@ -36,13 +58,21 @@ form {
   padding-top: 10px;
   padding-bottom: 20px;
 }
-.container div img:hover {
-  transform: scale(1.2);
-  transition-duration: 0.3s;
+
+.container div:hover {
+  transform: scale(1.1);
+  transition-duration: 500ms;
 }
 .container div {
-  margin-left: 1%;
-  margin-right: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all;
+  overflow: hidden;
+}
+.container div > p {
+  margin: 0 0 20px 0;
 }
 
 .close-button,
@@ -118,7 +148,7 @@ ul.slider_list {
   scroll-snap-type: x mandatory;
 }
 
-ul.slider_list >li{
+ul.slider_list > li {
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
@@ -127,10 +157,17 @@ li div.slider_list_element {
   /* top right bottom left */
   padding: 20px 10px 0 10px;
   cursor: pointer;
+  font-size: 1.2rem;
 }
+
 li div.slider_list_element:hover {
   transform: scale(1.2);
   transition-duration: 0.3s;
+}
+
+div.slider_list_element img {
+  height: 100px;
+  width: 100px;
 }
 
 div.information {
