--- a/src/styles/extras.scss
+++ b/src/styles/extras.scss
@@ -13,10 +13,12 @@ body{
   background-color: black;
   color: white;
 }
-.aboutImage img {
-  all: unset;
-  height: 60px;
-  padding: 10px;
+.aboutImage {
+  img {
+    all: unset;
+    height: 60px;
+    padding: 10px;
+  }
 }
 
 .contact-form {
@@ -25,12 +27,26 @@ body{
   padding-bottom: 10vh;
   margin: 0 auto;
   width: 50%;
+
+    p {
+      text-align: initial;
+      width: fit-content;
+      padding: 0;
+      margin: 0 auto;
+    }
+
+  @media only screen and (max-width: 600px) {
+      width:100%;
+  }
 }
 
-.form-text h2{
-  font-size: 25pt;
-  font-weight: 500;
+.form-text {
+  h2{
+    font-size: 25pt;
+    font-weight: 500;
+  }
 }
+
 .form-input {
   border-radius: 10px;
   border: none;
@@ -41,25 +57,22 @@ body{
   padding: 0.8em;
   color:white;
   font-size: 1em;
+
+  &::placeholder{
+    color:white;
+  }
+
+  &:focus{
+    background-color: white;
+    color:black;
+    outline:none;
+  }
+
+  @media only screen and (max-width: 600px) {
+      font-size: 0.8em;
+  }
 }
 
-@media only screen and (max-width: 600px) {
-  .contact-form {
-    width:100%;
-  }
-  .form-input{
-    font-size: 0.8em;
-  }
-}
-
-.form-input::placeholder{
-  color:white;
-}
-.form-input:focus{
-  background-color: white;
-  color:black;
-  outline:none;
-}
 .btn {
   background-color: #fa788d;
   border-radius: 5px;
@@ -67,32 +80,28 @@ body{
   padding: 0.5rem 2rem;
   font-size: 1.4rem;
   font-weight: 200;
-}
-.btn:focus {
-  border: none;
-  background-color: #54dcf2;
-  outline: none;
-}
-.btn:hover {
-  border: none;
-  background-color: #54dcf2;
+
+  &:focus {
+    border: none;
+    background-color: #54dcf2;
+    outline: none;
+  }
+
+  &:hover {
+    border: none;
+    background-color: #54dcf2;
+  }
 }
 
 .star{
   cursor: pointer;
 }
+
 .star_container{
   width: fit-content;
   text-align: center;
   margin: 0 auto;
   padding: 0;
-}
-
-div.contact-form p{
-  text-align: initial;
-  width: fit-content;
-  padding: 0;
-  margin: 0 auto;
 }
 
 .loader {
