--- a/src/styles/extras.scss
+++ b/src/styles/extras.scss
@@ -111,7 +111,7 @@ body{
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
-  margin: auto;
+  margin: auto 0;
 }
 
 .loader-container{
