--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,92 +1,109 @@
 /* All credits for the Navbar goes to "DevEd" youtube channel */
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333;
-  color: white;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #333;
+	color: white;
 }
 .brand-title {
-  font-size: 1.5rem;
-  margin: 0.5rem;
+	font-size: 1.5rem;
+	margin: 0.5rem;
 }
 .navbar-links ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
+	margin: 0;
+	padding: 0;
+	display: flex;
 }
 .navbar-links li {
-  list-style: none;
+	list-style: none;
 }
 .navbar-links li a {
-  padding: 1rem;
-  display: block;
+	padding: 1rem;
+	display: block;
 }
-.navbar a{
-  text-decoration: none;
-  color: white;
+.navbar a {
+	text-decoration: none;
+	color: white;
 }
 .navbar-links li:hover {
-  background-color: #555;
+	background-color: #555;
 }
 .toggle-button {
-  position: absolute;
-  top: 1.4rem;
-  right: 1rem;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 20px;
-  background-color: transparent;
-  padding: 0;
-  border: none;
+	position: fixed;
+	top: 1.4rem;
+	right: 1rem;
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 30px;
+	height: 20px;
+	background-color: transparent;
+	padding: 0;
+	border: none;
+	z-index: 2;
 }
 .toggle-button .bar {
-  height: 3px;
-  width: 100%;
-  background-color: white;
-  border-radius: 10px;
+	height: 3px;
+	width: 100%;
+	background-color: white;
+	border-radius: 10px;
 }
 @media (max-width: 600px) {
-  .toggle-button {
-    display: flex;
-  }
-  .navbar-links {
-    display: none;
-    width: 100%;
-  }
-  .navbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .navbar-links ul {
-    flex-direction: column;
-    width: 100%;
-  }
-  .navbar-links li {
-    text-align: center;
-  }
-  .navbar-links li a {
-    padding: 0.5rem 1rem;
-  }
-  .navbar-links.active, .navbar-links:focus {
-    display: flex;
-  }
+	.toggle-button {
+		display: flex;
+		left: 1rem;
+	}
+	/* make the brand on the right side of the box */
+	.brand-title {
+		display: none;
+	}
+	.navbar-links {
+		top: 0;
+		left: -100%;
+		width: 250px;
+		height: 100vh;
+		padding-top: 15%;
+		background-color: #333;
+		position: fixed;
+		z-index: 1;
+		transition: left 0.5s ease-in-out;
+	}
+	.navbar {
+		display: inline;
+	}
+	.navbar-links ul {
+		flex-direction: column;
+		width: 100%;
+	}
+	.navbar-links li {
+		text-align: center;
+	}
+	.navbar-links li a {
+		padding: 0.5rem 1rem;
+	}
+	.navbar-links.active,
+	.navbar-links:focus {
+		left: 0;
+		width: 250px;
+		height: 100vh;
+		display: block;
+		transition: left 0.5s ease-in-out;
+	}
 }
 
 /*  */
 ul li a.skip {
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+	position: absolute;
+	left: -10000px;
+	top: auto;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
 }
 
 ul li a.skip:focus {
-  position: static;
-  width: auto;
-  height: auto;
+	position: static;
+	width: auto;
+	height: auto;
 }
