--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-
 html {
   scroll-behavior: smooth;
 }
@@ -9,6 +8,8 @@ body {
 
 * {
   font-family: "Abel", sans-serif;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-out;
 }
 
 input {
@@ -53,22 +54,20 @@ li {
   font-size: 1em;
 
   @media only screen and (min-width: 600px) {
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-      font-size: 1.4em;
-      grid-auto-rows: 200px;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    font-size: 1.4em;
+    grid-auto-rows: 200px;
 
-      /* classes that style the grid layout. */
-      .card-tall {
-        grid-row: span 2 / auto;
-      }
-
-      .card-wide {
-        grid-column: span 2 / auto;
-      }
-
-      div > img:hover {
-        opacity: 0.3;
-      }
+    /* classes that style the grid layout. */
+    div.card-tall {
+      grid-row: span 2 / auto;
+    }
+    div.card-wide {
+      grid-column: span 2 / auto;
+    }
+    div > img:hover {
+      opacity: 0.3;
+    }
   }
 
   div {
@@ -83,9 +82,11 @@ li {
       transform: scale(1.1);
       transition-duration: 500ms;
     }
-
-    &> p {
+    & > p {
       margin: 0 0 20px 0;
+      width: 100%;
+      text-align: center;
+      
     }
   }
 
@@ -96,7 +97,8 @@ li {
 }
 
 .close-button,
-.theme-toggle {
+.theme-toggle,
+.reset-button {
   position: absolute;
   top: 4rem;
   cursor: pointer;
@@ -109,8 +111,10 @@ li {
 .theme-toggle {
   left: 0.8rem;
 }
-
 .close-button {
+  right: 1rem;
+}
+.reset-button {
   right: 1rem;
 }
 
@@ -124,6 +128,13 @@ li {
   position: relative;
   top: 10vh;
   width: 90%;
+  & > div,
+  & > div.flex-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
 
 .selected-image {
@@ -142,7 +153,6 @@ li {
 }
 
 .slider {
-  border: 2px solid orange;
   width: 80vw;
   overflow-x: auto;
   position: relative;
@@ -161,7 +171,7 @@ li {
 }
 
 .slider_list {
-  &> li {
+  & > li {
     scroll-snap-align: start;
     scroll-snap-stop: always;
   }
@@ -179,7 +189,7 @@ li {
   flex-wrap: wrap;
   justify-content: space-evenly;
 
-  &> .flex-info-element {
+  & > .flex-info-element {
     &:nth-child(3) {
       width: 100%;
     }
